--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,73 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+/*
     body{
         background: #BDBDBD;
     }
-    
+
     You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
+
+
+    ...Or you can use the import command to include
     other sylesheets into your bunde as well, e.j:
-    
+
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+  background: green;
+  background-image: url("https://www.freegreatpicture.com/files/146/25102-colorful-high-resolution-background.jpg");
+  background-repeat: repeat-x;
+}
+
+.card {
+  background: white;
+  width: 250px;
+  height: 400px;
+  border-radius: 20px;
+  position: relative;
+  top: 20px;
+  margin: auto;
+  border: 1px solid black;
+}
+.card:before {
+  position: absolute;
+  font-size: 50px;
+  top: 4px;
+  left: 8px;
+}
+.card:after {
+  font-size: 50px;
+  position: absolute;
+  bottom: 10px;
+  right: 19px;
+}
+.cardnumber {
+  font-size: 50px;
+  position: relative;
+  margin: auto;
+}
+.card.hearts:before,
+.card.hearts:after {
+  content: "\2665";
+  font-size: 50px;
+  color: red;
+}
+.card.spades:before,
+.card.spades:after {
+  content: "\2660";
+  font-size: 50px;
+  color: black;
+}
+.card.diamonds:before,
+.card.diamonds:after {
+  content: "\2666";
+  font-size: 50px;
+  color: red;
+}
+.card.clubs:before,
+.card.clubs:after {
+  content: "\2663";
+  font-size: 50px;
+  color: black;
+}
